# darling-man

./: .gitignore  CMakeLists.txt  configure
man/: Makefile  conf_script
man/en/: makewhatis.8  man.1  man.conf.5
man/man/: Makefile
man/man2html/: Makefile
man/msgs/: Makefile
man/src/: Makefile  apropos  gripedefs.h  makemsg  man.conf  msg.c  paths.h  version.h  whatis
src/: Makefile.in  makewhatis  man.conf  manpath.c  msg.c  paths.h  version.h  whatis
